# ChangeLog for dev-libs/xapian-bindings
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.40 2012/09/16 14:17:51 blueness Exp $

  16 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.12.ebuild:
  Stable ppc, bug #434564

  15 Sep 2012; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.12.ebuild:
  Stable for amd64, wrt bug #434564

  18 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.12.ebuild:
  Keyword ~arm

  18 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.12.ebuild:
  Keyword ~mips

*xapian-bindings-1.2.12 (28 Jun 2012)

  28 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  -xapian-bindings-1.2.11.ebuild, +xapian-bindings-1.2.12.ebuild:
  Version bump fixes broken SONAME in 1.2.11

*xapian-bindings-1.2.11 (28 Jun 2012)

  28 Jun 2012; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.11.ebuild:
  Version bump

*xapian-bindings-1.2.10 (10 May 2012)

  10 May 2012; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.10.ebuild:
  Version bump

  15 Mar 2012; Anthony G. Basile <blueness@gentoo.org>
  -xapian-bindings-1.2.5.ebuild, -xapian-bindings-1.2.7-r2.ebuild:
  Remove older unstable ebuilds

  14 Mar 2012; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.9.ebuild:
  Tested on ppc/ppc64

*xapian-bindings-1.2.9 (13 Mar 2012)

  13 Mar 2012; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.9.ebuild:
  Version bump

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xapian-bindings-1.2.8.ebuild:
  x86 stable wrt bug #402187

  25 Feb 2012; Patrick Lauer <patrick@gentoo.org> xapian-bindings-1.2.5.ebuild,
  xapian-bindings-1.2.7-r2.ebuild, xapian-bindings-1.2.8.ebuild:
  Restricting pypy

  05 Feb 2012; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.8.ebuild:
  Stable for amd64, wrt bug #402187
