@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/xapian-1.2.12.ebuild,v 1.6 2012/09/16 14:16:46 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/xapian-1.2.12.ebuild,v 1.7 2012/09/16 16:20:10 blueness Exp $
 
 EAPI="4"
 
@@ -12,7 +12,7 @@ SRC_URI="http://oligarchy.co.uk/xapian/${PV}/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~mips ppc ~ppc64 ~x86"
+KEYWORDS="amd64 arm ~mips ppc ~ppc64 ~x86"
 IUSE="doc static-libs -sse +sse2 +brass +chert +inmemory"
 
 DEPEND="sys-libs/zlib"
