@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xapian
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.84 2012/09/16 14:16:46 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.85 2012/09/16 16:20:10 blueness Exp $
+
+  16 Sep 2012; Anthony G. Basile <blueness@gentoo.org> xapian-1.2.12.ebuild:
+  Stable arm, bug #434564
 
   16 Sep 2012; Anthony G. Basile <blueness@gentoo.org> xapian-1.2.12.ebuild:
   Stable ppc, bug #434564
