@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xapian-bindings
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.40 2012/09/16 14:17:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.41 2012/09/16 16:21:29 blueness Exp $
+
+  16 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
+  xapian-bindings-1.2.12.ebuild:
+  Stable arm, bug #434564
 
   16 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   xapian-bindings-1.2.12.ebuild:
